--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          pip install -r requirements.txt
-          pip install .
+          python -m pip install pip --upgrade
+          python -m pip install pytest
+          python -m pip install -r requirements.txt
+          python -m pip install .
       - name: Test with pytest
         run: |
           pytest .
